--- a/_config.yml
+++ b/_config.yml
@@ -157,9 +157,9 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
-scheme: Muse
+# scheme: Muse
 #scheme: Mist
-#scheme: Pisces
+scheme: Pisces
 
 # ---------------------------------------------------------------
 # Font Settings
