--- a/_config.yml
+++ b/_config.yml
@@ -157,9 +157,9 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
-# scheme: Muse
+scheme: Muse
 #scheme: Mist
-scheme: Pisces
+# scheme: Pisces
 
 # ---------------------------------------------------------------
 # Font Settings
@@ -300,7 +300,7 @@ excerpt_description: true
 # Automatically Excerpt. Not recommend.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: true
+  enable: false
   length: 150
 
 # Post meta display settings
