--- a/_config.yml
+++ b/_config.yml
@@ -228,9 +228,9 @@ social_icons:
   enable: true
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
-  # Bilibili: bilibili
+  Bilibili: webhook
   GitHub: github
-  # Gitee: gitter
+  Gitee: webhook
 
 # Sidebar Avatar
 # in directory: /assets/images/avatar.gif
