--- a/_config.yml
+++ b/_config.yml
@@ -215,6 +215,7 @@ font:
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
+  caiguang.cc: https://caiguang.cc
   Bilibili: https://space.bilibili.com/628189581
   GitHub: https://github.com/caiguang
   Gitee: https://gitee.com/caiguang_cc
@@ -229,6 +230,7 @@ social_icons:
   # Icon Mappings.
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome,图标都是我乱写的根本不存在的
   Bilibili: bilibili
+  caiguang.cc: caiguang
   GitHub: caiguang
   Gitee: gitee
 
