--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # Site
 title: 蔡广博客
-subtitle: 学习、记录、分享、进步。
+subtitle: 学习、记录、分享、
 description: 这里是蔡广的博客
 author: caiguang
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
